--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,18 @@ services:
       - "5432:5432"
     volumes:
       - inventory_management_db-data:/var/lib/postgresql/data
+  api:
+    container_name: api
+    build: 
+      context: ./api
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    volumes:
+      - type: bind
+        source: ./api
+        target: /app/api
 
 volumes:
   inventory_management_db-data:
