final fix for day 1: fixed docker-compose file with the new database name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,5 +38,5 @@ services:
         source: ./client
         target: /app/client
 volumes:
-  inventory_management_db-data:
+  db-data:
   # no additional options for this volume are necessary as of now
